2006-03-01  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* Repository: STLport 5.0.2, tag STLPORT_5_0_2

2006-02-28  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* stlport/stl/_string.h: capacity may return wrong value in case
	of no _STLP_USE_SHORT_STRING_OPTIM in use; thanks Rusty Koonce
	for report.

	* test/unit/string_test.cpp: test for capacity issue.

	* src/cxa.c: don't use cxa workaround for FreeBSD 6.0---it fine;
	this is rollback of changes 2006-01-24 [bad compiler was in use].

2006-02-10  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* src/num_put_float.cpp: remove usage of static buffers
	[potential vulnerabilities]; directly use __iostring instead.

	* test/unit/floatio_test.cpp: test for fixed float output;
	cases when fixed float fail on Linux and Solaris, related
	with fcvt_r and fconvert calls respectivly commented.

	* build/Makefiles/gmake/gcc.mak: workaround for bug in make 3.79.1
	on Solaris [not pass -D_STLP_DEBUG to CPPFLAGS].

2006-02-06  Francois Dumont  <dums@stlport...>

	* build/Makefiles/nmake: Fixed regression generated by a side
	effect of Uli patch below.

2006-02-02  Francois Dumont  <dums@stlport...>

	* stlport/config/_stl_evc.h, stl/_config.h: Patch from Ulrich
	Eckhardt to signal endianess detection problem and set EVC
	endianess for MIPS SDK.

2006-01-30  Francois Dumont  <dums@stlport...>

	* Patch from Ulrich Eckhardt for EVC4 ICE + some documentation
	updates and fixes.

2006-01-24  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* test/unit/bind_test.cpp: add test for member function
	binding that show workaround for const function call.

	* build/lib/configure: add --with-boost option from STLport 5.1

	* src/cxa.c: __cxa_finalize and __cxa_atexit present in libc
	in FreeBSD 5.3, but again absent in 6.0

2006-01-18  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* build/Makefiles/gmake/app/gcc.mak,
	build/Makefiles/gmake/lib/gcc.mak: detect whether gcc